--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     <img src="./img/kk.jpeg" alt="" />
     <h4>이하 링크로 가는 내용</h4>
     <a href="http://naver.com" target="_blank">네이버로 가는 링크</a>
-    <a href="./src/second.html">내 두번째 문서로 가는 길</a>
+    <a href="./src/second.html">2주차 과제</a>
   </body>
 </html>
